fix-nowrap (#31)
* Revert nowrap for regular-content

The only place I could find where it made sense to truncate was in the summary, but that can be handled differently (by limiting allowed input for example. And should the information even be limited if present?

* Still truncate in summary

* Spec

--- a/src/components/organisms/AVResourceSection/AVResourceSection.scss
+++ b/src/components/organisms/AVResourceSection/AVResourceSection.scss
@@ -15,10 +15,6 @@
 .AVResourceSection--regular-content {
   max-width: 100%;
   margin-bottom: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  text-wrap: nowrap;
 }
 
 .AVResourceSection--image {
